# aws-agentcore-enterprise-toolkit

./: .bedrock_agentcore_example.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  .terraformignore  .tflint.hcl  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md  release.yml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
agent-config/: customer-support.yaml  warranty-docs.yaml
agents/: DEVELOPER_GUIDE.md  README.md
agents/customer-support/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  runtime.py
agents/customer-support/tools/: __init__.py  product_tools.py
agents/global-tools/: README.md  pyproject.toml
agents/warranty-docs/: Dockerfile  README.md  __init__.py  pyproject.toml  requirements.txt  runtime.py
agents/warranty-docs/tools/: __init__.py  preferences.py  product_tools.py
docs/: README.md  security.md
docs/diagrams/: frontend-gateway.mmd  frontend.mmd  gateway-tools.mmd  infra-overview.mmd  runtime.mmd
docs/validation/: README.md  best-practices.md  orphan-audit.md
frontend/streamlit_app/: README.md  api_client.py  auth.py  config.py  main.py  pyproject.toml  requirements.txt  runtime_client.py
infrastructure/terraform/: .terraformignore  README.md  providers.tf  versions.tf
scripts/infra/: drift-check.sh  noop-check.sh  preflight-checks.sh  teardown.sh  terraform-validate.sh  validate.sh
scripts/local/: README.md  run-agent-docker.sh
services/frontend-gateway/: auth.py  lambda_function.py  (+1 more)
tests/: TESTING_SUMMARY.md  __init__.py  conftest.py
(+116 files in other folders)
